// Copyright 2013 Google Inc. All Rights Reserved.
// Author: alasdair@google.com (Alasdair Mackintosh)
//
// A record of a user interaction event captured by PixelPerfect.  Combines the
// RecordedUpdate generated by the PersonalRecorder app with additional
// information from the Clearcut log.

syntax = "proto2";

package wireless_android_play_playlog;

import "net/proto2/bridge/proto/message_set.proto";
import "wireless/android/play/playlog/proto/clientanalytics.proto";
import "wireless/android/play/playlog/proto/personal_recorder.proto";

option java_package = "com.google.wireless.android.play.playlog.proto";
option java_outer_classname = "PersonalApplicationEventProto";

option optimize_for = LITE_RUNTIME;

message PersonalApplicationEvent {
  extend proto2.bridge.MessageSet {
    optional PersonalApplicationEvent message_set_extension = 58425595;
  }

  // Describes the client where this event came from
  optional ClientInfo client_info = 1;

  // The UTC timestamp for when this event happened.
  optional int64 timestamp_millis = 2;

  // The UTC timestamp that the client gave us for when this event happened.
  // Unreliable, but useful for diagnosing clock skew issues.
  optional int64 client_timestamp_millis = 3;

  // The event recorded by the client.
  optional RecordedUpdate recorded_update = 4;
}
